# KNN-MNIST-classifier

./: .coverage  .gitignore  .pylintrc  README.md  pyproject.toml  tasks.py
docs/: Käyttöohje.md  Määrittelydokumentti.md  Testausdokumentti.md  Toteutusdokumentti.md  käyttöohje.md
src/: 3aq  abc.py  app.py  event.csv  hausdorffcompare.py  hausdorffvertailu.py  kPienimmat.py  kSmallest.py  klahimmat.py  lataaja.py  main.py  pointsetmaker.py  prosessit.py
src/data/: csvGeneraattori.py  csvKaantaja.py  pistejoukkoGen.py  pistejoukko_gen.py  pointsetmaker.py
src/tests/: hausdorff_test.py  knn_test.py  pistejoukkoGen_test.py  pistejoukko_gen_test.py  testi_arvot.py
src/ui/: piirrin.py
viikkoraportit/: viikkoraportt2.md  viikkoraportti1.md  viikkoraportti3.md  viikkoraportti4.md  viikkoraportti5.md  viikkoraportti6.md
