[tool.poetry]
name = "tiralabra"
version = "0.1.0"
description = ""
authors = ["helmer <helmer.lauronen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.18"
matplotlib = "^3.6.3"
pylint = "^2.16.1"
pytest = "^7.2.1"
numba = "^0.56.4"
coverage = "^7.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
