[tool.poetry]
name = "tiralabra"
version = "0.1.0"
description = ""
authors = ["helmer <helmer.lauronen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10,<3.12"
numpy = "^1.18"
matplotlib = "^3.6.3"
pylint = "^2.16.1"
pytest = "^7.2.1"
coverage = "^7.2.1"
scipy = "^1.10.1"
invoke = "^2.0.0"
fastapi = "^0.109.2"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
websockets = "^12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
